# WaMaxPackage

./: .gitignore  .gitmodules  ReadMe.md  icon.afdesign  package-info.json  selfsign_mac.sh  setup.sh
code/: byte_to_signal.gendsp  linalg.genexpr  signal_to_byte.gendsp  spatial.gendsp  tools.genexpr  wave_terrain.gendsp
collections/: WaMaxPackage.maxcoll
devices/: l4m.audio.amxd  l4m.instrument.amxd  l4m.midi.amxd  wa.force_link.amxd  wa.jit_world.amxd  wa.live.hagia.amxd  wa.live4max.amxd  wa.open_max.amxd  wa.rack_power.amxd  wa.scale_sl3.amxd  wa.stop.amxd
docs/: _wa.maestro.contour.maxref.xml  helpformax.maxref.xml  wa.attractor~.maxref.xml  wa.audio.footswitch.maxref.xml  wa.banger.maxref.xml  wa.bitify.byte~.maxref.xml  wa.bitify.matrix~.maxref.xml  wa.bitify.signal~.maxref.xml  wa.blocks.autopan~.maxref.xml  wa.blocks.encoder.maxref.xml  wa.blocks.feedcomb~.maxref.xml  wa.blocks.feedpass~.maxref.xml  wa.blocks.key.maxref.xml  wa.blocks.pan~.maxref.xml  wa.chain.output.maxref.xml  wa.chain.stage.maxref.xml  wa.channel_strip.master~.maxref.xml  wa.channel_strip.mono~.maxref.xml  wa.channel_strip.pass~.maxref.xml  wa.channel_strip.receive~.maxref.xml  wa.channel_strip.send~.maxref.xml  wa.channel_strip.stereo~.maxref.xml  wa.color_conversion.maxref.xml  wa.control.drum.maxref.xml  wa.cpumeter.maxref.xml  wa.crossfade~.maxref.xml  wa.crosssynth~.maxref.xml  wa.daw.display.maxref.xml  wa.daw.receive~.maxref.xml  wa.daw.send~.maxref.xml  wa.dc_coupled.calibration.maxref.xml  wa.debug.treedump.maxref.xml  wa.debug.window.maxref.xml  wa.device.grid.enc16.maxref.xml  wa.device.grid.maxref.xml  wa.device.grid.pot16.maxref.xml  wa.device.kraken.maxref.xml  wa.device.launchkey.maxref.xml  wa.device.launchpad.maxref.xml  wa.device.maxscreen.maxref.xml  (+215 more)
help/: WaMaxPackage.hello-world.maxhelp  spectraphone.aiff  wa.midi.sendtimecode.maxhelp
init/: wa.bitify.matrix~.txt  wa.channel_strip.master~.txt  wa.channel_strip.mono~.txt  wa.channel_strip.pass~.txt  wa.channel_strip.receive~.txt  wa.channel_strip.send~.txt  wa.channel_strip.stereo~.txt  wa.control.drum.txt  wa.cpumeter.txt  wa.daw.display.txt  wa.debug.window.txt  wa.device.grid.enc16.txt  wa.device.grid.pot16.txt  wa.device.grid.txt  wa.device.launchkey.txt  wa.device.launchpad.txt  wa.device.push2~.txt  wa.filterbank~.txt  wa.grid.pot.txt  wa.ir-imposter.txt  wa.ir_creator.txt  wa.lattice.block.txt  wa.launchkey.device.txt  wa.launchkey.place.txt  wa.launchpad.button_tool.txt  wa.launchpad.device.txt  wa.launchpad.place.txt  wa.maestro.groove_visu.txt  wa.midi.devicelist.txt  wa.mixer.bus.receive~.txt  wa.mixer.bus.send~.txt  wa.mixer.bus_receive~.txt  wa.mixer.bus_send~.txt  wa.mixer.channel.mono~.txt  wa.mixer.channel.pass~.txt  wa.mixer.channel.stereo~.txt  wa.mixer.console.txt  wa.mixer.master~.txt  wa.mixer.send~.txt  (+25 more)
source/HelpForMax/: CMakeLists.txt  Common.pri  HelpForMax.hpp  HelpForMax.pro  Info.plist  MainWindow.cpp  MainWindow.h  MessageBar.cpp  MessageBar.h  MessageChannel.cpp  MessageChannel.h  OverviewGraph.cpp  OverviewGraph.h  PatchWidget.cpp  PatchWidget.h  PatchWidget.ui  RecentFiles.cpp  RecentFiles.h  SchemaWidget.cpp  SchemaWidget.h  Server.cpp  Server.h  ServerTabWidget.cpp  ServerTabWidget.h  Socket.cpp  Socket.h  SocketPatchWidget.cpp  TabWidget.cpp  TabWidget.h  TestClient.cpp  TestClient.h  TestClient.pro  TestClient.ui  _MainWindow.h
source/HelpForMax/Block/: Block.cpp  Block.h  BlockRef.cpp  BlockRef.h  Package.cpp  Package.h
source/HelpForMax/Data/: Block.cpp  Data.pri  Package.cpp  Package.h  Structure.h
source/HelpForMax/Edit/: ComponentModel.cpp  ComponentModel.h  Edit.pri  EditWidget.cpp  EditWidget.h  EditWidget.ui  PatchWidget.cpp  PatchWidget.h  PatchWidget.ui  SocketPatchWidget.h
source/HelpForMax/Overview/: Overview.pri  OverviewGraph.cpp  OverviewGraph.h  OverviewWidget.cpp
source/HelpForMax/Package/: Package.pri  PackageInfo.cpp  PackageInfo.h  PackageModel.cpp  PackageModel.h  PackageView.cpp  PackageView.h  PackageWidget.cpp  PackageWidget.h  PackageWidget.ui
source/HelpForMax/Patch/: Block.cpp  Block.h  ComponentModel.h  DelegateDataType.cpp  DelegateDataType.h  DelegatePatchType.cpp  DelegatePatchType.h  DelegateType.cpp  DelegateType.h  DescriptionHighlighter.cpp  DescriptionHighlighter.h  DigestWidget.ui  FileAbstract.cpp  FileAbstract.h  FileHelp.cpp  FileHelp.h  FileIni.cpp  FileIni.h  FileInit.cpp  FileInit.h  FileRef.cpp  FileRef.h  Patch.pri  PatchArgumentModel.cpp  PatchArgumentModel.h  PatchModelAbstract.cpp  PatchModelAbstract.h  PatchModelArgument.cpp  PatchModelArgument.h  PatchModelHeader.cpp  PatchModelHeader.h  PatchModelNamedMessage.cpp  PatchModelNamedMessage.h  PatchModelOutput.cpp  PatchModelOutput.h  PatchModelTypedMessage.cpp  PatchModelTypedMessage.h  PatchNamedMessageModel.cpp  PatchNamedMessageModel.h  PatchOutputModel.cpp  (+19 more)
source/HelpForMax/Tools/: ModelItem.cpp  ModelItem.h  Tools.pri  TypeDelegate.cpp  TypeDelegate.h
source/HelpForMax/icons/: ArrowLeft.afdesign  DocComplete.afdesign  DocDescription.afdesign  DocDescsription.afdesign  DocMessageNamd.afdesign  DocMessageNamed.afdesign  DocMessageTyped.afdesign  DocMissing.afdesign  DocOutput.afdesign  HelpForMax.afdesign  HelpForMax.icns  OverviewGeneral.afdesign  PackageClose.afdesign  PackageGeneral.afdesign  PackageLoad.afdesign  PackageReload.afdesign  PatchArgument.afdesign  PatchClose.afdesign  PatchOpenInMax.afdesign  PatchOpenRef.afdesign  PatchSaveAll.afdesign  icons.qrc
source/maxobjects/: CMakeLists.txt  common.hpp
source/maxobjects/wa.from7bit/: CMakeLists.txt  wa.from7bit.cpp  wa.from7bit.h
source/maxobjects/wa.helpfile/: CMakeLists.txt  wa.helpfile.cpp  wa.helpfile.h
source/maxobjects/wa.push2_display/: CMakeLists.txt  wa.push2_display.cpp  wa.push2_display.h
source/maxobjects/wa.to7bit/: CMakeLists.txt  wa.to7bit.cpp  wa.to7bit.h
source/objects/wa.push2_display/: CMakeLists.txt  wa.push2_display.cpp  wa.push2_display.h
source/objects/wa.qml_gui/: CMakeLists.txt  wa.qml_gui.cpp  wa.qml_gui.h
source/objects/wa.to7bit/: CMakeLists.txt  wa.to7bit.cpp  wa.to7bit.h
(+769 files in other folders)
